--- a/cv-webapp-react-bulma/package.json
+++ b/cv-webapp-react-bulma/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cv-webapp-react-bulmer",
+  "name": "cv-webapp-react-bulma",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
